[project]
name = "loomnt"
version = "0.1.0"
description = "Turn a Loom video URL into a list of concrete engineering action items using Gemini."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "rich>=13.0",
    "click>=8.1",
    "requests>=2.31",
    "yt-dlp>=2024.1.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
loomnt = "loomnt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loomnt"]
